@@ -1,2 +1,12 @@
 # JavaFX-BMI-Calculator
 ![Screenshot](https://github.com/i-zanis/JavaFX-BMI-Calculator/blob/master/sampleProgramAppearance.png)
+
+/**
+ * BMI Calculator application created in JavaFX.
+ * Created non-standard for educational purposes without FXML/Scene Builder - Gluon.
+
+ * Made on OpenJDK14.
+ * Please download "javafx-sdk-11.0" and add all the jar-files in
+ * Javafx-sdk-11.0.2\lib\ to the global library.
+ * VM options --module-path %java path% --add-modules javafx.controls,javafx.fxml
+ */
